# Personas_Agentes

./: .env.example  .gitignore  .gitmodules  6dec891_main_gui.py  Director - Project Orchestrator.txt  README.md  activate-phase.test.ts  activate-phase.ts  agents_registry.json  ast_parity_matrix.json  audit_connection_20260201.md  audit_connection_20260202.md  auto_healing_VERIFIED.md  auto_healing_mission.md  auto_healing_mission.txt  brittle_files.txt  brittle_inspection.txt  bunx-util.ts  check_bolt.ts  check_veto.py  commits_to_check.txt  compiler.py  conflicts.txt  connection_diagnostic.md  debug_alerts.js  debug_alerts_detail.js  debug_assertion_detection.js  debug_ast.py  debug_breakdown.ts  debug_brittle.py  debug_cc.ts  debug_complexity.js  debug_complexity_after_refactor.js  debug_detailed_penalties.js  debug_final_health.js  debug_health.js  debug_health_flow.js  debug_logic_output.json  debug_metrics.js  debug_metrics_quality.ts  (+114 more)
src_native/analyzer/: .sovereign_cache.json  Cargo.toml  audit_test.json  build.rs  conn_test.json  dedup_test.json  errors.json  penalty_test.json  rust_check.json  rust_scan_results.json
src_native/analyzer/src/: analysis.rs  audit.rs  batch.rs  cache.rs  chat.rs  connectivity.rs  coverage_auditor.rs  deduplicator.rs  dependencies.rs  dna.rs  fingerprint.rs  graph.rs  lib.rs  main.rs  penalty.rs  pruner.rs  scanner.rs  score_calculator.rs  search.rs  server.rs  wasm_bridge.rs
src_native/analyzer/src/brain/: mod.rs
src_native/analyzer/target_alt/: .rustc_info.json
src_native/analyzer/target_alt/release/.fingerprint/bitflags-84e97fd339d0d22d/: lib-bitflags.json
src_native/analyzer/target_alt/release/.fingerprint/cfg-if-be2711f84a777e73/: lib-cfg_if
src_native/analyzer/target_alt/release/.fingerprint/crossbeam-epoch-ee2d63bbacf5c032/: lib-crossbeam_epoch
src_native/analyzer/target_alt/release/.fingerprint/crossbeam-utils-8c5c370242fe82ea/: build-script-build-script-build  build-script-build-script-build.json
src_native/analyzer/target_alt/release/.fingerprint/either-665e1118d359612d/: lib-either
src_native/analyzer/target_alt/release/.fingerprint/getrandom-079d667befe1342c/: lib-getrandom  lib-getrandom.json
src_native/analyzer/target_alt/release/.fingerprint/getrandom-1b9f61641faff610/: lib-getrandom
src_native/analyzer/target_alt/release/.fingerprint/getrandom-945033dc1c86face/: build-script-build-script-build.json
src_native/analyzer/target_alt/release/.fingerprint/getrandom-b908162a7c9b1fa5/: run-build-script-build-script-build
src_native/analyzer/target_alt/release/.fingerprint/icu_normalizer_data-73f8135478c0fdcc/: build-script-build-script-build.json
src_native/analyzer/target_alt/release/.fingerprint/libm-2142c0baef347164/: run-build-script-build-script-build  run-build-script-build-script-build.json
src_native/analyzer/target_alt/release/.fingerprint/libm-3df6764371c48b14/: lib-libm.json
src_native/analyzer/target_alt/release/.fingerprint/litemap-3b2f18c0e4fd78c6/: lib-litemap
src_native/analyzer/target_alt/release/.fingerprint/memchr-cd375b47babd4815/: lib-memchr  lib-memchr.json
src_native/analyzer/target_alt/release/.fingerprint/num-traits-68c899c302eb4e3b/: run-build-script-build-script-build
src_native/analyzer/target_alt/release/.fingerprint/paste-5681823bf69d17f0/: output-lib-paste
src_native/analyzer/target_alt/release/.fingerprint/paste-bc366b4dfa723fa6/: run-build-script-build-script-build.json
src_native/analyzer/target_alt/release/.fingerprint/paste-f16eadf014ebfc66/: build-script-build-script-build
src_native/tray_rust/: Cargo.toml
src_native/tray_rust/src/: main.rs
(+1925 files in other folders)
