[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
rayon = "1.10"
