[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
rayon = "1.10"
regex = "1.10"
aho-corasick = "1.1"
memmap2 = "0.9"
chrono = "0.4"
petgraph = { version = "0.6", features = ["serde-1"] }
ureq = { version = "2.9", features = ["json"] }
bincode = "1.3"
dirs = "5.0"

# IA Sovereignty Core
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
tokenizers = "0.19"
safetensors = "0.4.5"

# Version Pinning for Windows/Rand compatibility
rand = "=0.8.5"
rand_distr = "=0.4.3"
half = "=2.4.1"
sha2 = "0.10.9"

# WASM (opt-in)
wasm-bindgen = { version = "0.2", optional = true }

# gRPC / Proto
tonic = { version = "0.12.3", features = ["prost"] }
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.18"

[features]
default = []
wasm = ["wasm-bindgen"]

[lib]
name = "analyzer_lib"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.12.3"
protoc-bin-vendored = "3.2.0"
